added some images, working on classes and modules

--- a/clicker_game/pages/index.html
+++ b/clicker_game/pages/index.html
@@ -3,15 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="../styles/style.css" />
     <title>Clicker</title>
   </head>
   <body>
+    <div class="svg-container">
+      <img src="../images/circ.svg" class="companion" alt="" />
+      <img src="../images/tri.svg" class="companion" alt="" />
+      <img src="../images/rect.svg" class="companion" alt="" />
+    </div>
     <div class="generators-container"></div>
     <div class="container">
       <span class="amount-display">0</span>
       <button type="button" class="main-button">Click Me!</button>
-      <script src="./script.js"></script>
+      <script type="module" src="../js/script.js"></script>
     </div>
   </body>
 </html>
